[package]
name = "apps-distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# - https://docs.rs/vercel_runtime/latest/vercel_runtime
# - https://github.com/vercel-community/rust

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
serde_derive = "1.0.188"
url = "2.4.1"
vercel_runtime = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "distributed"
path = "api/distributed.rs"
